[tool.poetry]
name = "llm-metrics"
version = "0.1.0"
description = "A package for basic llm metrics"
authors = ["Ryan Daniels"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "llm_metrics"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.54.0"
python-dotenv = "^1.0.1"
numpy = "^2.1.3"
pyaml = "^24.9.0"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12.20240917"

[tool.black]
line-length = 88
exclude = '''
/(
      .eggs         
    | .git          
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
